styles/main.css
* {
    margin: 0;
    padding: 0;
    letter-spacing: 0.1rem;
    color: rgb(36, 36, 86);
}

html {
    font-size: 62.5%;
    font-family: 'Roboto', sans-serif;
}

body {
    background-color: aliceblue;
    color: rgb(27, 27, 32);
    margin: 0;
    padding: 0;

}

h1,
h2,
h3,
h4 {

    margin-bottom: 2rem;

}

h1 {
    font-size: 5.6rem;
    color: rgb(11, 8, 76);
}

h2 {
    font-size: 3.6rem;
    color: rgb(70, 67, 108);
}

h3 {
    font-size: 3rem;
    color: rgb(70, 67, 108);
}

h4 {
    font-size: 1.9rem;
    color: rgb(70, 67, 108);
}

p {
    font-size: 1.6rem;
    margin-bottom: 1.6rem;
    line-height: 1.3;
    margin-bottom: 2rem;
}

li {
    font-size: 1.6rem;
    margin-bottom: 1rem;
}

li ul {
    margin-top: 1rem;
}

.form-field {
    color: rgb(27, 27, 32);
    padding: 0.5rem;
}

.bold-text {
    font-weight: bold;
}

#blackoutCover {
    background-color: rgba(0, 0, 0, 0.164);
    backdrop-filter: blur(3px);
    width: 100vw;
    height: 100vh;
    position: fixed;
    top: 0;
    left: 0;
    visibility: hidden;
}

.popup {
    background-color: rgba(221, 231, 241, 0.936);
    border: 0.1rem solid rgb(183, 193, 202);
    border-radius: 0.5rem;
    position: fixed;
    transform: translate(-50%, -50%);
    top: 50vh;
    left: 50vw;
    width: 60vw;
    height: 80vh;
    overflow: auto;
    display: grid;
    gap: 2rem;
    grid-template-rows: 2rem auto auto;
    padding: 2rem;
    visibility: hidden;
    z-index: 1;
}

.popup-text {
    display: grid;
    gap: 2rem;
    grid-template-columns: 1fr;
    grid-template-rows: auto auto;

}

.popup-sidebar {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: 1fr;

}

.popup-screenshots {
    border-top: 0.1rem solid rgb(183, 193, 202);
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 2rem;
    min-height: 10rem;
    padding-top: 2rem;
}

.popup-screenshot-thumb {
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    box-shadow: 0.5rem 0.5rem 0.8rem rgba(0, 0, 0, 0.336);
    border: 1px solid rgb(73, 73, 73);
    border-radius: 0.5rem;
    width: 100%;
    height: 100%;

    cursor: pointer;
}

.popup li {
    margin-left: 1.6rem;
}

.popup ul {
    margin-bottom: 2rem;
}


.popup h4 {
    margin-top: 1.1rem;
}

.popup-close-container {
    display: flex;
    justify-content: end;
}

.popup-close-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
    bottom: 1rem;
    left: 1rem;
    width: 2rem;
    height: 2rem;
    border: 1px solid rgb(96, 96, 134);
    border-radius: 0.3rem;
}

.popup-close-icon:hover {
    border: 1px solid rgb(36, 36, 86);
}

.close-icon-svg {
    stroke: rgb(96, 96, 134);
    stroke-width: 1.5rem;
}

.close-icon-svg:hover {
    stroke: rgb(36, 36, 86);
}



a {
    text-decoration: none;
}

header {
    background-color: rgba(221, 231, 241, 0.847);
    backdrop-filter: blur(5px);
    border-bottom: 0.1rem solid rgb(183, 193, 202);
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0;
    position: fixed;
    top: 0;
    right: 0;
    width: 100%;
    height: 5rem;
}

footer {
    position: fixed;
    bottom: 0;
    background-color: rgba(221, 231, 241, 0.847);
    backdrop-filter: blur(5px);
    border-top: 0.1rem solid rgb(183, 193, 202);
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin: 0;
    width: 100%;
    height: 5rem;
}

.copyright {
    color: rgb(36, 36, 86);
    margin-right: 2rem;
    font-size: 1.6rem;
}

.footer-links {
    display: flex;
    margin-left: 2rem;
    align-items: center;
    justify-items: center;
    gap: 1rem;

}

.linkedin-logo,
.github-logo,
.email-logo {
    fill: rgb(96, 96, 134);

}

.linkedin-logo:hover,
.github-logo:hover,
.email-logo:hover {
    fill: rgb(36, 36, 86);

}

.linkedin-link {
    background-image: url('../img/LinkedInLogo.png');
    height: 3.2rem;
    width: 3.75rem;
    background-repeat: no-repeat;
    background-size: contain;
    margin: 0 0.5rem;
}

.github-link {
    background-image: url('../img/GitHubLogoDark.png');
    background-repeat: no-repeat;
    height: 3.2rem;
    width: 3.2rem;
    background-size: contain;
    margin: 0 0.5rem;
}

.footer-email {
    background-image: url('../img/email-link-black.png');
    background-repeat: no-repeat;
    background-size: contain;
    height: 3.2rem;
    width: 3.2rem;
    font-size: 3.2rem;
    margin: 0 0.5rem;
}

.intro {
    margin-top: 10rem;
}

.christoffer-gylin-logo {
    height: 3.5rem;
    margin-left: 2rem;
    stroke: rgb(36, 36, 86);
    fill: rgb(36, 36, 86);
}

nav a {
    color: rgb(96, 96, 134);
    text-decoration: none;
    text-underline-offset: 0.7rem;
}

nav a:hover,
nav a:focus {
    color: rgb(36, 36, 86);
    text-decoration: underline;
}

.menuIcon {

    border: 0.1em solid rgb(96, 96, 134);
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    width: 3.5em;
    height: 3.5em;
    padding: 0.3em;
    margin: 0.3em;
    border-radius: 0.5em;

}

.menuBar {
    width: 2.3em;
    height: 0.5em;
    background-color: rgb(96, 96, 134);
    border-radius: 1em;
}

.menuIcon:hover .menuBar {
    background-color: rgb(36, 36, 86);
}

.menuIcon:hover {
    border: 0.1em solid rgb(36, 36, 86);
}

nav ul {

    display: flex;
    padding: 0;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin: 0;

    list-style: none;
}

nav a {
    color: rgb(96, 96, 134);
    text-decoration: none;
    text-underline-offset: 0.7rem;
}

nav a:hover,
nav a:focus {
    color: rgb(36, 36, 86);
    text-decoration: underline;
}

.currentPageListItem a {
    color: rgb(36, 36, 86);
    text-decoration: underline;
}

nav li {

    font-size: 2em;
    padding: 0.5em 0;
    text-align: center;

}

nav li:last-child {
    border: 0;
}

.nav-desktop {
    display: none;
}
/* ... */

